nimutils/switchboard.h

typedef void (*switchboard_cb_t)(void *, void *, char *, size_t);
/*
 * The common abstraction for parties.
 * - `erno` will hold the value of any captured (fatal) os error we
 *    ran accross. This is only used for PT_FD and PT_LISTENER.
 * - `open` tracks whether we should deal with this party at all anymore;
 *   it can mean the fd is closed, or that nothing is routed to it anymore.
 * - `can_read_from_it` and `can_write_to_it` indicates whether a party is
 *   a source (the former) or a sink (the later). Can be both, too.
 * - `close_on_destroy` indicates that we should call close() on any file
 *   descriptors when tearing down the switchboard.
 *   When this is set, we do not report errors in close(), and we
 *   assume the same fd won't have been reused if it was otherwise
 *   closed during the switchboard operation.
 *   This only gets used for objs of type `PT_FD` and `PT_LISTENER`
 * - `stop_on_close` indicates that, when we notice a failure to
 *   read/write from a file descriptor, we should stop the switchboard;
 *   we do go ahead and finish available reads/writes, but we do nothing
 *   else.
 *   This should generally be the behavior you want when stdin, stdout
 *   or stderr go away (the controlling terminal is probably gone).
 *   However, it's not the right behavior for when a sub-process dies;
 *   There, you want to drain the read-size of the file descriptor.
 *   For that, you register the sub-process with `sb_monitor_pid()`.
 * - `next_reader`, `next_writer` and `next_loner` are three linked lists;
 *   a party might appear on up to two at once. `next_reader` and
 *   `next_writer` are only used for fd types. The first list can have
 *   both `PT_FD`s and `PT_LISTENER`s; the second only `PT_FD`s.
 *   The switchboard runs down these to figure out what to select() on.
 *   And, then when exiting, these lists are walked to free `party_t`
 *   objects.
 *   `next_loner` is for all other types, and is only used at the end to
 *   free stuff.
 * - `extra` is user-defined, ideal for state keeping in callbacks.
 */
typedef struct party_t {
    party_e         party_type;
    party_info_t    info;
    int             found_errno;
    bool            open_for_write;
    bool            open_for_read;
    bool            can_read_from_it;
    bool            can_write_to_it;
    bool            close_on_destroy;
    bool            stop_on_close;
    struct party_t *next_reader;
    struct party_t *next_writer;
    struct party_t *next_loner;
    void           *extra;
} party_t;
typedef struct {
    char *tag;
    char *contents;
    int   len;
} capture_result_t;
typedef struct {
    int               num_captures;
    capture_result_t *captures;
} sb_result_t;
/*
 * The main switchboard object. Generally, the fields here can be
 * transparent to the user; everything should be dealt with via API.
 */
typedef struct switchboard_t {
    struct timeval   *io_timeout_ptr;
    struct timeval    io_timeout;
    progress_cb_decl  progress_callback;
    bool              progress_on_timeout_only;
    bool              done;
    fd_set            readset;
    fd_set            writeset;
    int               max_fd;
    int               fds_ready; // Used to determine if we timed out.
    party_t          *parties_for_reading;
    party_t          *parties_for_writing;
    party_t          *party_loners;
    monitor_t        *pid_watch_list;
    sb_msg_t         *freelist;
    sb_heap_t        *heap;
    size_t            heap_elems;
    void             *extra;
    bool              ignore_running_procs_on_shutdown;
    sb_result_t       result;
} switchboard_t;
typedef struct {
    switchboard_t   sb;
    bool            run;
    int             signal_fd;
    int             pty_fd;
    bool            pty_stdin_pipe;
    bool            use_pty;
    bool            str_waiting;
    char           *cmd;
    char          **argv;
    char          **envp;
    char           *path;
    char            passthrough;
    bool            pt_all_to_stdout;
    char            capture;
    bool            combine_captures;  // Combine stdout / err and termout
    party_t         str_stdin;
    party_t         parent_stdin;
    party_t         parent_stdout;
    party_t         parent_stderr;
    party_t         subproc_stdin;
    party_t         subproc_stdout;
    party_t         subproc_stderr;
    party_t         capture_stdin;
    party_t         capture_stdout;
    party_t         capture_stderr;
    void            (*startup_callback)(void *);
    struct termios  saved_termcap;
    struct termios *parent_termcap;
    struct termios *child_termcap;
    struct dcb_t   *deferred_cbs;
} subprocess_t;
typedef struct dcb_t {
    struct dcb_t       *next;
    unsigned char       which;
    switchboard_cb_t    cb;
    party_t            *to_free;
} deferred_cb_t;
extern bool write_data(int, char *, size_t);
extern void subproc_init(subprocess_t *, char *, char *[]);
extern bool subproc_set_envp(subprocess_t *, char *[]);
extern bool subproc_pass_to_stdin(subprocess_t *, char *, size_t, bool);
extern bool subproc_set_passthrough(subprocess_t *, unsigned char, bool);
extern bool subproc_set_capture(subprocess_t *, unsigned char, bool);
extern bool subproc_set_io_callback(subprocess_t *, unsigned char,
                                    switchboard_cb_t);
extern void subproc_set_timeout(subprocess_t *, struct timeval *);
extern void subproc_clear_timeout(subprocess_t *);
extern bool subproc_use_pty(subprocess_t *);
extern bool subproc_set_startup_callback(subprocess_t *, void (*)(void *));
extern int  subproc_get_pty_fd(subprocess_t *);
extern void subproc_start(subprocess_t *);
extern bool subproc_poll(subprocess_t *);
extern void subproc_prepare_results(subprocess_t *);
extern void subproc_run(subprocess_t *);
extern void subproc_close(subprocess_t *);
extern pid_t subproc_get_pid(subprocess_t *);
extern char *subproc_get_capture(subprocess_t *, char *, size_t *);
extern int subproc_get_exit(subprocess_t *, bool);
extern int subproc_get_errno(subprocess_t *, bool);
extern int subproc_get_signal(subprocess_t *, bool);
extern void subproc_set_parent_termcap(subprocess_t *, struct termios *);
extern void subproc_set_extra(subprocess_t *, void *);
extern void *subproc_get_extra(subprocess_t *);
extern int subproc_get_pty_fd(subprocess_t *);
extern void termcap_get(struct termios *);
extern void termcap_set(struct termios *);
extern void termcap_set_typical_parent();